--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -34,10 +34,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.activity:activity:1.1.0-alpha03'
-    implementation 'androidx.activity:activity-ktx:1.1.0-alpha03'
-    implementation 'androidx.fragment:fragment:1.2.0-alpha04'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha04'
+    implementation 'androidx.activity:activity:1.1.0-beta01'
+    implementation 'androidx.activity:activity-ktx:1.1.0-beta01'
+    implementation 'androidx.fragment:fragment:1.2.0-beta01'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-beta01'
     implementation project(':ViewModel-SavedState-ktx')
     implementation 'com.github.wada811:DataBinding-ktx:2.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
