--- a/ViewModel-SavedState-ktx/build.gradle
+++ b/ViewModel-SavedState-ktx/build.gradle
@@ -12,6 +12,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0-beta01'
-    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0-rc01'
+    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-rc01'
 }
