--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -34,10 +33,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.activity:activity:1.1.0-beta01'
-    implementation 'androidx.activity:activity-ktx:1.1.0-beta01'
-    implementation 'androidx.fragment:fragment:1.2.0-beta01'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-beta01'
+    implementation 'androidx.activity:activity:1.1.0-rc01'
+    implementation 'androidx.activity:activity-ktx:1.1.0-rc01'
+    implementation 'androidx.fragment:fragment:1.2.0-rc01'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc01'
     implementation project(':ViewModel-SavedState-ktx')
     implementation 'com.github.wada811:DataBinding-ktx:2.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
