--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,6 +10,10 @@ android {
         targetSdkVersion 29
     }
     buildTypes {
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -33,12 +37,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.activity:activity:1.1.0-rc02'
-    implementation 'androidx.activity:activity-ktx:1.1.0-rc02'
-    implementation 'androidx.fragment:fragment:1.2.0-rc02'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc02'
+    implementation 'androidx.activity:activity:1.1.0'
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment:1.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0'
     implementation project(':ViewModel-SavedState-ktx')
-    implementation 'com.github.wada811:DataBinding-ktx:2.2.0'
+    implementation 'com.github.wada811:DataBinding-ktx:4.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
 }
