--- a/ViewModel-SavedState-ktx/build.gradle
+++ b/ViewModel-SavedState-ktx/build.gradle
@@ -2,16 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 29
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+    compileSdkVersion 30
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.0-alpha01'
-    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-beta01'
 }
