--- a/ViewModel-SavedState-ktx/build.gradle
+++ b/ViewModel-SavedState-ktx/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
+    defaultConfig {
+        minSdkVersion 15
+    }
 }
 
 dependencies {
