--- a/ViewModel-SavedState-ktx/build.gradle
+++ b/ViewModel-SavedState-ktx/build.gradle
@@ -10,6 +10,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-rc01'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0'
 }
