--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,9 @@
-buildscript {
-    ext.kotlin_version = '1.4.31'
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id "com.diffplug.spotless" version "6.12.0" apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+apply from: "${rootDir}/publish-root.gradle"
