--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,11 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 30
+    namespace "com.wada811.savedstateviewmodel.sample"
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.wada811.savedstateviewmodel.sample"
-        minSdkVersion 17
-        targetSdkVersion 30
+        minSdkVersion 21
+        targetSdkVersion 33
     }
     buildTypes {
         debug {
@@ -27,19 +28,13 @@ android {
     }
 }
 
-repositories {
-    google()
-    jcenter()
-    maven { url "https://www.jitpack.io/" }
-}
-
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.activity:activity-ktx:1.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
     implementation project(':ViewModel-SavedState-ktx')
-    implementation 'com.github.wada811:DataBinding-ktx:5.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.wada811.databindingktx:databindingktx:7.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.7.0'
 }
